apps/saleor-api/overlays/dev/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: saleor-api
  namespace: kyeol
spec:
  template:
    spec:
      containers:
        - name: api
