apps/saleor-api/overlays/dev/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: saleor-api
  namespace: kyeol
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
      name: http
