apps/saleor-api/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: saleor-api
  annotations:
    alb.ingress.kubernetes.io/group.name: "kyeol-ingress"
spec:
  rules:
    - host: api-dev.kyeol.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: saleor-api
                port:
                  name: http
